11월 24일 마지막 작업

--- a/02_ETL/01_Pandas_basic/Step1/1-3.ipynb
+++ b/02_ETL/01_Pandas_basic/Step1/1-3.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "5cc9c2ce",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "d0e6f38f",
    "metadata": {},
    "outputs": [
@@ -91,7 +91,7 @@
        "b  3  4  5"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "6506cba6",
    "metadata": {},
    "outputs": [
@@ -112,7 +112,7 @@
        "pandas.core.indexes.base.Index"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "b7828406",
    "metadata": {
     "scrolled": true
@@ -135,7 +135,7 @@
        "Index(['a', 'b'], dtype='object')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "5742500b",
    "metadata": {},
    "outputs": [
@@ -156,7 +156,7 @@
        "Index(['c', 'd', 'e'], dtype='object')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "79d5fe11",
    "metadata": {},
    "outputs": [
@@ -177,7 +177,7 @@
        "pandas.core.indexes.base.Index"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "c621cc84",
    "metadata": {},
    "outputs": [
@@ -198,7 +198,7 @@
        "numpy.ndarray"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,9 +209,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "24f7ba4c",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -220,7 +222,7 @@
        "       [3, 4, 5]], dtype=int64)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
