--- a/02_ETL/01_Pandas_basic/Step2/2-9.ipynb
+++ b/02_ETL/01_Pandas_basic/Step2/2-9.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "12c83971",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "509402e4",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "10fece9d",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "e9a5e3a1",
    "metadata": {},
    "outputs": [
@@ -54,7 +54,7 @@
        "Name: s1, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "id": "0828e1fa",
    "metadata": {},
    "outputs": [
@@ -79,7 +79,7 @@
        "Name: s2, dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +90,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
+   "id": "edd7f3a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'b'"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s2[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "id": "ccf1bf67",
    "metadata": {},
    "outputs": [],
@@ -101,9 +122,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "id": "eac54623",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -163,7 +186,7 @@
        "3   4  d"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,9 +197,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "id": "346b24a7",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -188,7 +213,7 @@
        "Name: s1, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,9 +224,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "id": "5bf2be7c",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -213,7 +240,7 @@
        "Name: s1, dtype: bool"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,19 +251,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "id": "4cf2c2af",
    "metadata": {},
    "outputs": [],
    "source": [
     "# dict가 아닌 경우 시리즈의 이름이 행 한위로 들어감\n",
-    "# 다음 다음의 예제와 같은 원리\n",
+    "# 다음 다음의 예제와 같은 원리"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "4eb279fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df_a = pd.DataFrame([s1,s2])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "id": "50eff217",
    "metadata": {},
    "outputs": [
@@ -292,7 +328,7 @@
        "s2  a  b  c  d"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "id": "e073fe75",
    "metadata": {},
    "outputs": [],
@@ -318,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "id": "ab43a3ee",
    "metadata": {},
    "outputs": [
@@ -374,7 +410,7 @@
        "1  a  b  c  d"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
