--- a/02_ETL/01_Pandas_basic/데이터 분석 과제/데이터분석과제_22.11.28(현재봉,양석훈).ipynb
+++ b/02_ETL/01_Pandas_basic/데이터 분석 과제/데이터분석과제_22.11.28(현재봉,양석훈).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "id": "20e2cc1f",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "id": "94c953b3",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "id": "0460a978",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "id": "c59a2a47",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "id": "bf19fcd4",
    "metadata": {},
    "outputs": [
@@ -166,7 +166,7 @@
        "4   0.31     Good     J     SI2   63.3   58.0    335  4.34  4.35  2.75"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "id": "9e459850",
    "metadata": {},
    "outputs": [],
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "id": "730c252d",
    "metadata": {},
    "outputs": [
@@ -311,7 +311,7 @@
        "27745   2.00  Very Good     H     SI1   62.8   57.0  18803  7.95  8.00  5.01"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "id": "be74493c",
    "metadata": {
     "scrolled": true
@@ -342,7 +342,7 @@
        "18795"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "id": "acc31767",
    "metadata": {},
    "outputs": [
@@ -381,7 +381,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,10 +400,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "669033c8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.duplicated().sum()"
    ]
@@ -418,51 +429,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "7d5f2c33",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Premium      0.358\n",
+       "Ideal        0.327\n",
+       "Very Good    0.220\n",
+       "Good         0.074\n",
+       "Fair         0.021\n",
+       "Name: cut, dtype: float64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df['cut'].value_counts(normalize=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "6da1e242",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.01    0.145\n",
+       "2.00    0.068\n",
+       "2.02    0.057\n",
+       "2.03    0.042\n",
+       "2.05    0.032\n",
+       "        ...  \n",
+       "1.34    0.001\n",
+       "1.64    0.001\n",
+       "1.38    0.001\n",
+       "1.03    0.001\n",
+       "2.59    0.001\n",
+       "Name: carat, Length: 134, dtype: float64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df['carat'].value_counts(normalize=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "c79a4185",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SI2     0.313\n",
+       "SI1     0.246\n",
+       "VS2     0.211\n",
+       "VS1     0.140\n",
+       "VVS2    0.036\n",
+       "IF      0.029\n",
+       "VVS1    0.021\n",
+       "I1      0.004\n",
+       "Name: clarity, dtype: float64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df['clarity'].value_counts(normalize=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "aa163edc",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "H    0.215\n",
+       "I    0.208\n",
+       "G    0.189\n",
+       "F    0.152\n",
+       "E    0.096\n",
+       "J    0.071\n",
+       "D    0.069\n",
+       "Name: color, dtype: float64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df['color'].value_counts(normalize=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "0ea3a13e",
    "metadata": {},
    "outputs": [],
@@ -472,17 +558,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "fd2948da",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>carat</th>\n",
+       "      <th>cut</th>\n",
+       "      <th>color</th>\n",
+       "      <th>clarity</th>\n",
+       "      <th>depth</th>\n",
+       "      <th>table</th>\n",
+       "      <th>price</th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>z</th>\n",
+       "      <th>price_factor</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>27749</th>\n",
+       "      <td>2.29</td>\n",
+       "      <td>Premium</td>\n",
+       "      <td>I</td>\n",
+       "      <td>VS2</td>\n",
+       "      <td>60.8</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>18823</td>\n",
+       "      <td>8.50</td>\n",
+       "      <td>8.47</td>\n",
+       "      <td>5.16</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27748</th>\n",
+       "      <td>2.00</td>\n",
+       "      <td>Very Good</td>\n",
+       "      <td>G</td>\n",
+       "      <td>SI1</td>\n",
+       "      <td>63.5</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>18818</td>\n",
+       "      <td>7.90</td>\n",
+       "      <td>7.97</td>\n",
+       "      <td>5.04</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27747</th>\n",
+       "      <td>1.51</td>\n",
+       "      <td>Ideal</td>\n",
+       "      <td>G</td>\n",
+       "      <td>IF</td>\n",
+       "      <td>61.7</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>18806</td>\n",
+       "      <td>7.37</td>\n",
+       "      <td>7.41</td>\n",
+       "      <td>4.56</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27746</th>\n",
+       "      <td>2.07</td>\n",
+       "      <td>Ideal</td>\n",
+       "      <td>G</td>\n",
+       "      <td>SI2</td>\n",
+       "      <td>62.5</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>18804</td>\n",
+       "      <td>8.20</td>\n",
+       "      <td>8.13</td>\n",
+       "      <td>5.11</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27745</th>\n",
+       "      <td>2.00</td>\n",
+       "      <td>Very Good</td>\n",
+       "      <td>H</td>\n",
+       "      <td>SI1</td>\n",
+       "      <td>62.8</td>\n",
+       "      <td>57.0</td>\n",
+       "      <td>18803</td>\n",
+       "      <td>7.95</td>\n",
+       "      <td>8.00</td>\n",
+       "      <td>5.01</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       carat        cut color clarity  depth  table  price     x     y     z  \\\n",
+       "27749   2.29    Premium     I     VS2   60.8   60.0  18823  8.50  8.47  5.16   \n",
+       "27748   2.00  Very Good     G     SI1   63.5   56.0  18818  7.90  7.97  5.04   \n",
+       "27747   1.51      Ideal     G      IF   61.7   55.0  18806  7.37  7.41  4.56   \n",
+       "27746   2.07      Ideal     G     SI2   62.5   55.0  18804  8.20  8.13  5.11   \n",
+       "27745   2.00  Very Good     H     SI1   62.8   57.0  18803  7.95  8.00  5.01   \n",
+       "\n",
+       "       price_factor  \n",
+       "27749             0  \n",
+       "27748             0  \n",
+       "27747             0  \n",
+       "27746             0  \n",
+       "27745             0  "
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "64733336",
    "metadata": {},
    "outputs": [],
@@ -492,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "79cb0c9e",
    "metadata": {},
    "outputs": [],
@@ -502,10 +718,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "427b9ba6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>carat</th>\n",
+       "      <th>cut</th>\n",
+       "      <th>color</th>\n",
+       "      <th>clarity</th>\n",
+       "      <th>depth</th>\n",
+       "      <th>table</th>\n",
+       "      <th>price</th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>z</th>\n",
+       "      <th>price_factor</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>27749</th>\n",
+       "      <td>2.29</td>\n",
+       "      <td>Premium</td>\n",
+       "      <td>I</td>\n",
+       "      <td>VS2</td>\n",
+       "      <td>60.8</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>18823</td>\n",
+       "      <td>8.50</td>\n",
+       "      <td>8.47</td>\n",
+       "      <td>5.16</td>\n",
+       "      <td>6738.634</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27748</th>\n",
+       "      <td>2.00</td>\n",
+       "      <td>Very Good</td>\n",
+       "      <td>G</td>\n",
+       "      <td>SI1</td>\n",
+       "      <td>63.5</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>18818</td>\n",
+       "      <td>7.90</td>\n",
+       "      <td>7.97</td>\n",
+       "      <td>5.04</td>\n",
+       "      <td>6153.486</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27747</th>\n",
+       "      <td>1.51</td>\n",
+       "      <td>Ideal</td>\n",
+       "      <td>G</td>\n",
+       "      <td>IF</td>\n",
+       "      <td>61.7</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>18806</td>\n",
+       "      <td>7.37</td>\n",
+       "      <td>7.41</td>\n",
+       "      <td>4.56</td>\n",
+       "      <td>6149.562</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27746</th>\n",
+       "      <td>2.07</td>\n",
+       "      <td>Ideal</td>\n",
+       "      <td>G</td>\n",
+       "      <td>SI2</td>\n",
+       "      <td>62.5</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>18804</td>\n",
+       "      <td>8.20</td>\n",
+       "      <td>8.13</td>\n",
+       "      <td>5.11</td>\n",
+       "      <td>6148.908</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27745</th>\n",
+       "      <td>2.00</td>\n",
+       "      <td>Very Good</td>\n",
+       "      <td>H</td>\n",
+       "      <td>SI1</td>\n",
+       "      <td>62.8</td>\n",
+       "      <td>57.0</td>\n",
+       "      <td>18803</td>\n",
+       "      <td>7.95</td>\n",
+       "      <td>8.00</td>\n",
+       "      <td>5.01</td>\n",
+       "      <td>6148.581</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       carat        cut color clarity  depth  table  price     x     y     z  \\\n",
+       "27749   2.29    Premium     I     VS2   60.8   60.0  18823  8.50  8.47  5.16   \n",
+       "27748   2.00  Very Good     G     SI1   63.5   56.0  18818  7.90  7.97  5.04   \n",
+       "27747   1.51      Ideal     G      IF   61.7   55.0  18806  7.37  7.41  4.56   \n",
+       "27746   2.07      Ideal     G     SI2   62.5   55.0  18804  8.20  8.13  5.11   \n",
+       "27745   2.00  Very Good     H     SI1   62.8   57.0  18803  7.95  8.00  5.01   \n",
+       "\n",
+       "       price_factor  \n",
+       "27749      6738.634  \n",
+       "27748      6153.486  \n",
+       "27747      6149.562  \n",
+       "27746      6148.908  \n",
+       "27745      6148.581  "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.head()"
    ]
