--- a/02_ETL/01_Pandas_basic/Step5/5장 2.ipynb
+++ b/02_ETL/01_Pandas_basic/Step5/5장 2.ipynb
@@ -1123,7 +1123,7 @@
     {
      "data": {
       "text/plain": [
-       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x00000195668328B0>"
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x000001EF2AE96C40>"
       ]
      },
      "execution_count": 18,
@@ -5579,7 +5579,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Yangsh\\AppData\\Local\\Temp\\ipykernel_6780\\1357162473.py:2: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "C:\\Users\\Yangsh\\AppData\\Local\\Temp\\ipykernel_9896\\1357162473.py:2: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  df11_a = df11.append({'봄':'A5','여름' :'B5','가을':'C5','겨울':'D5'},\n"
      ]
     }
@@ -5871,7 +5871,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Yangsh\\AppData\\Local\\Temp\\ipykernel_6780\\1495440483.py:1: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "C:\\Users\\Yangsh\\AppData\\Local\\Temp\\ipykernel_9896\\1495440483.py:1: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  df11.append(df2)\n"
      ]
     },
