--- a/02_ETL/01_Pandas_basic/Step5/5장 3.ipynb
+++ b/02_ETL/01_Pandas_basic/Step5/5장 3.ipynb
@@ -218,7 +218,8 @@
    "source": [
     "# 데이터프레임명.melt 함수는 열을 (녹여서) 병합한다 \n",
     "# id_vars: 고정열, var_name: 병합할 열 이름, value_name: 병합할 열의 값 이름, value_vars: 병합할 Target 열\n",
-    "df2 = df.melt(id_vars = \"student_id\", var_name = \"Subject\", value_name = \"Score\", value_vars=['Math', 'English'])\n",
+    "df2 = df.melt(id_vars = \"student_id\", var_name = \"Subject\",\n",
+    "              value_name = \"Score\", value_vars=['Math', 'English'])\n",
     "df2"
    ]
   },
