12월 19일 집에서 작업

--- a/02_ETL/04_Data_analys/02_탐색적분석/Example1/조별과제_양석훈_현재봉_이예지.ipynb
+++ b/02_ETL/04_Data_analys/02_탐색적분석/Example1/조별과제_양석훈_현재봉_이예지.ipynb
@@ -757,7 +757,7 @@
    "id": "252ff8f5",
    "metadata": {},
    "source": [
-    "### Step1            # 문구 수정\n",
+    "### Step1            \n",
     "데이터 분석의 목적, 대상 또는 가설을 세운다.\n",
     "* 데이터 분석의 목적 : 의뢰인인 출판사의 신간의 저자, 출시월, 가격, 커버형태, 페이지수, 카테고리등을 추천하여\n",
     "  높은 세일즈 포인트를 받을 가능성을 높인다.\n",
