--- a/04_AI/02_머신러닝/3_1_K_최근접이웃_선형회귀모델_과대과소적합.ipynb
+++ b/04_AI/02_머신러닝/3_1_K_최근접이웃_선형회귀모델_과대과소적합.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
        "(56, 56)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -205,7 +205,8 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "선형회귀모델이기 때문에 분류클래스가 존재하지 않고 선형값을 예측하기 때문"
+    "선형회귀모델이기 때문에 분류클래스가 존재하지 않고 선형값을 예측하기 때문\n",
+    "선형모델에서는 예를들어 0이나 1등의 분류클래스로 분류하는 것이 목적이지 않기 때문에 strafify옵션을 사용하지 않는다."
    ]
   },
   {
@@ -217,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -253,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -278,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -322,7 +323,8 @@
     "## 선형회귀 평가 방식\n",
     "* 분류 모델은 평가를 정확도로 하지만 선형회귀모델은 정확도 이외에 다양한 방식으로 평가\n",
     "* k 최근접 모델은 R 스퀘어 방식으로 평가하는 score 함수를 제공함\n",
-    "* $ R^2$ (결정 계수)"
+    "* $ R^2$ (결정 계수)\n",
+    "* R 스퀘어 값은 정답률이 아니다. 얼마나 타깃에 근접한 결과를 냈는지를 표현하는 평가방식이다."
    ]
   },
   {
@@ -340,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -354,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -383,7 +385,7 @@
        "KNeighborsRegressor()"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -424,7 +426,7 @@
        "0.992809406101064"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -468,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -516,12 +518,13 @@
     "## 과대적합(Overfitting) vs 과소적합(Underfitting)\n",
     "* 과대적합\n",
     " - 훈련셋의 결과가 테스트셋 결과보다 좋게 나오는 경우\n",
-    " - 너무 많은 데이터로 학습이 된 경우\n",
+    " - 너무 많은 데이터로 학습이 된 경우 => 모델이 훈련셋에 지나치게 최적화 된 경우\n",
     " - 모델이 훈련셋에 맞게 하이퍼파라메터가 최적화 된 경우\n",
     "* 과소적합\n",
     " - 테스트셋의 결과가 훈련셋 결과보다 좋게 나오는 경우\n",
-    " - 적은 데이터로 모델이 학습된 경우 => 학습데이터가 적어서 우연히 훈련결과가 좋게 나온 경우\n",
+    " - 너무 적은 데이터로 학습이 된 경우 => 학습데이터가 적어서 우연히 훈련결과가 좋게 나온 경우\n",
     " - 모델의 하이퍼파라메터가 최적화 되지 않은 경우 발생 가능\n",
+    "\n",
     "#### 가장좋은 것은 훈련셋의 결과와 테스트셋의 결과가 거의 동일해야 한다.\n",
     "* 훈련셋의 결과와 테스트셋 결과의 간극을 줄이는 노력을 해야 한다."
    ]
@@ -535,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -578,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -643,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -679,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -689,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -712,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -760,7 +763,7 @@
        "  'score_difference': 0.012145135321795508}]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -778,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -806,7 +809,7 @@
        "  'score_difference': 0.002021321759198891}]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -824,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
    "metadata": {
     "scrolled": true
    },
@@ -854,7 +857,7 @@
        "  'score_difference': 0.002021321759198891}]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -872,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -900,12 +903,13 @@
        "  'score_difference': 0.00581171266561864}]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# 6.626178285862316e-05 => 6.626178285862316 * 10의 -5승 = 0.00006626178285862316\n",
     "sorted(score_info, key=itemgetter('score_difference') )[:5]"
    ]
   },
@@ -918,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -927,12 +931,13 @@
        "42"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# 절대적인 기준은 아님 하나의 예로 볼 것.\n",
     "# 훈련데이터와 시험데이터 점수 차이가 작아야 한다.\n",
     "# 훈련데이터 점수가 시험데이터 점수보다 크다\n",
     "# 그 중에서 시험데이터 점수가 가장 커야 한다.\n",
@@ -944,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -953,7 +958,7 @@
        "[2, 3, 4, 6, 8, 9, 10, 13, 14, 15, 16, 18, 19, 20, 21, 22, 23, 24, 25, 26]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -968,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1087,7 +1092,7 @@
        "9            8     0.969760    0.978054          0.008294"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1099,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1226,7 +1231,7 @@
        "41           42     0.000000   -0.055113          0.055113"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1238,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1317,7 +1322,7 @@
        "7            36     0.345921    0.338113          0.007808"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1331,7 +1336,14 @@
    "metadata": {},
    "source": [
     "### 어떤 하이퍼파라메터를 취해야 할 것인가? \n",
-    "### n_neighbors 4 vs 5"
+    "### n_neighbors 4 vs 5\n",
+    "### 3: 훈련데이터 점수와 시험데이터 점수 차이가 적은 것중에 가장 성능이 좋은 모델\n",
+    "####    => 일반적인 상황\n",
+    "### 4: 훈련데이터 점수와 시험데이터 점수 차이가 적고 훈련데이터 점수가 더 높은 것중 가장 성능이 좋은 모델\n",
+    "####    => 타협할 수 있는 선택\n",
+    "### 5: 성능이 가장 좋은 모델\n",
+    "####    => 데이터셋이 적을 경우 예측력이 떨어질 수 있다.\n",
+    "####    => 데이터셋이 정해져 있다면 해당 파라메터를 선택"
    ]
   },
   {
@@ -1346,7 +1358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 43,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1420,6 +1432,13 @@
     "    plt.ylabel('weight')\n",
     "    plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
